# Staqtapp-TDS

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py  tds_persistence.py
benchmarks/: benchmark_v210.py
docs/: 02_Module_Layout.md  03_Manifest_System.md  04_Semantic_Routing_Zones.md  05_Directory_Telemetry.md  06_Capability_Registry.md  07_Concurrency.md  08_Numba_Strategy.md  09_Native_Backend_Roadmap.md  10_Performance_Guide.md  11_Design_Principles.md  12_Roadmap.md  13_Future_ASI_Integration.md  14_Variable_Control.md  15_Text_Payloads.md  16_Storage_Refinement.md  17_Invariant_Engine.md  18_Native_EntryIndex.md  19_Provenance_Cluster.md  20_Radix_Swiss_Performance.md  21_Admin_Control_Panel.md  23_Spiral_Trace_Support.md  27_v251_Deep_GIL_Telemetry_Hardening.md  28_v260_ASI_Storm_Operations.md
docs/diagrams/: architecture.txt
src/: falcon.py
src/staqtapp_tds/: __init__.py  _native_index.c  arena.py  capabilities.py  cluster.py  config.py  crypto.py  index.py  invariants.py  latency.py  manifest.py  namespaces.py  provenance.py  radix.py  secure.py  serializers.py  srz.py  tds_filesystem.py  tds_persistence.py  telemetry.py  verify.py  version.py
src/staqtapp_tds/admin/: __init__.py  audit.py  auth.py  console.py  (+2 more)
staqtapp_tds/: __init__.py  tds_filesystem.py  tds_persistence.py
tests/: test_v180_native_provenance_cluster.py  test_v201_radix_swiss.py  test_v231_dashboard_assets.py  test_v235_professional_dashboard.py  test_v237_spiral_support.py  test_v242_metadata_native_engine.py  test_v250_hardening_telemetry.py  test_v260_asi_storm.py
(+16 files in other folders)
