[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "staqtapp-tds"
version = "1.1.188"
description = "Temporal Directory System — VFS for ASI-scale computation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["vfs", "filesystem", "numpy", "numba", "concurrency", "binary", "asi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
fast = ["numba>=0.57"]
dev  = ["pytest>=7", "pytest-cov", "build", "twine"]

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/staqtapp-tds"
Repository = "https://github.com/YOUR_USERNAME/staqtapp-tds"
Issues     = "https://github.com/YOUR_USERNAME/staqtapp-tds/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["staqtapp_tds*"]
